testsuite/tests/indexed-types/should_fail/T8518.stderr

T8518.hs:14:18: error:
    • Couldn't match type: F c
                     with: Z c -> B c -> F c
        arising from a use of ‘rpt’
    • In the expression: rpt (4 :: Int) c z b
      In an equation for ‘callCont’:
          callCont c z b
            = rpt (4 :: Int) c z b
            where
                rpt 0 c' z' b' = fromJust (fst <$> (continue c' z' b'))
                rpt i c' z' b' = let ... in rpt (i - 1) c''
    • Relevant bindings include
        b :: B c (bound at T8518.hs:14:14)
        z :: Z c (bound at T8518.hs:14:12)
        c :: c (bound at T8518.hs:14:10)
        callCont :: c -> Z c -> B c -> Maybe (F c) (bound at T8518.hs:14:1)
